    (Yufei Gu via Yongjun Zhang)

    HADOOP-7139. Allow appending to existing SequenceFiles
    (kanaka kumar avvaru via vinayakumarb)

    HADOOP-11958. MetricsSystemImpl fails to show backtrace when an error
    occurs (Jason Lowe via jeagles)

    HADOOP-12158. Improve error message in
    TestCryptoStreamsWithOpensslAesCtrCryptoCodec when OpenSSL is not
    installed. (wang)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11812. Implement listLocatedStatus for ViewFileSystem to speed up
    split calculation (gera)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

    HADOOP-12104. Migrate Hadoop Pipes native build to new CMake framework
    (alanburlison via cmccabe)

    HADOOP-12036. Consolidate all of the cmake extensions in one directory
    (alanburlison via cmccabe)

    HADOOP-12112. Make hadoop-common-project Native code -Wall-clean
    (alanburlison via cmccabe)

  BUG FIXES

    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)

    HADOOP-11724. DistCp throws NPE when the target directory is root.
    (Lei Eddy Xu via Yongjun Zhang) 

    HADOOP-11760. Fix typo of javadoc in DistCp. (Brahma Reddy Battula via
    ozawa).

    HADOOP-11800. Clean up some test methods in TestCodec.java.
    (Brahma Reddy Battula via aajisaka)
